# tomte

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF-review-fixes.md  Makefile  README.md  SECURITY.md  action.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  server.rs  tests.rs
crates/cli/src/commands/: blame.rs  chat.rs  completions.rs  config.rs  cost.rs  doctor.rs  handoff.rs  hooks.rs  login.rs  mcp.rs  mod.rs  models.rs  prove.rs  pulse.rs  race.rs  receipt.rs  rounds.rs  seal.rs  sessions.rs  twin.rs  ui.rs  update.rs  why.rs  why_context.rs
crates/cli/src/commands/chat/: render.rs
crates/cli/src/tui/: app.rs  buddy.rs  clipboard.rs  composer.rs  context_view.rs  input.rs  login.rs  mod.rs  palette.rs  picker.rs  selection.rs  ui.rs
crates/cli/src/tui/app/: agentevent.rs  app_behavior_tests.rs  app_goal_todo_tests.rs  app_plan_mode_tests.rs  app_test_support.rs  blocks.rs  consts.rs  editor.rs  entry.rs  helpers.rs  keys.rs  mainloop.rs  methods.rs  overlay.rs  pager.rs  prompts.rs  resume.rs  slash.rs  slash2.rs  slash3.rs  slash_meta.rs  slash_ops.rs  summary.rs  tests_a.rs  tests_b.rs  tests_c.rs  tests_common.rs  turn.rs  types.rs
crates/cli/src/tui/app/app_behavior_tests/: conscience.rs  guards.rs  misc.rs  render.rs  spinner.rs
crates/cli/src/tui/app/types/: block.rs  modes.rs  pending.rs
crates/cli/src/tui/buddy/: render.rs  tests.rs
crates/cli/src/tui/login/: render.rs  tests.rs
crates/cli/src/tui/picker/: items.rs
crates/cli/src/tui/ui/: body.rs  chat.rs  markdown.rs  panels.rs  status.rs  tests.rs  tools.rs  util.rs
crates/cli/src/tui/ui/chat/: tests.rs
crates/cli/src/tui/ui/markdown/: block.rs  highlight.rs  inline.rs  table.rs
crates/cli/src/tui/ui/tests/: chat_cache_tests.rs  choice_modal_tests.rs  diff_hunk_tests.rs  edit_diff_render_tests.rs  input_wrap_tests.rs  markdown_block_tests.rs  markdown_inline_tests.rs  path_display_tests.rs  preflight_render_tests.rs  record_decision_render_tests.rs  sanitize_tests.rs  shell_tool_render_tests.rs  spinner_tests.rs  status_footer_tests.rs  thinking_render_tests.rs  todo_panel_tests.rs  todo_tool_render_tests.rs  (+1 more)
crates/cli/tests/: sandbox.rs
crates/core/: Cargo.toml
crates/core/src/: catalog.rs  client.rs  command.rs  config.rs  conscience.rs  context_manifest.rs  context_report.rs  decisions.rs  doctor.rs  fallback.rs  handoff.rs  hooks.rs  lib.rs  mcp.rs  memory.rs  models_report.rs  permissions.rs  pricing.rs  proof.rs  provider.rs  reasoning_wire_tests.rs  receipt.rs  retry.rs  rounds.rs  seal.rs  secret_env.rs  sensitive.rs  session.rs  sessions_report.rs  setup.rs  skill.rs  subagent.rs  tool_args.rs  usage.rs  why_diff.rs
crates/core/src/agent/: agent_test_support.rs  approval_gate_tests.rs  arg_buffer_tests.rs  argbuf.rs  canonical.rs  canonical2.rs  canonical_args.rs  canonical_args_tests.rs  compaction_tests.rs  context_limit_tests.rs  defs.rs  event.rs  exec.rs  fcid_a.rs  fcid_b.rs  fcid_c.rs  fcid_common.rs  fcid_d.rs  lifecycle.rs  mod.rs  permission_gate_tests.rs  preflight.rs  stream.rs  todo_reminder.rs  tool_call_wrapper_tests.rs  tool_exec_tests.rs  tool_result_tests.rs  toolphase.rs  turn.rs  usage.rs
crates/core/src/agent/usage/: tests.rs
crates/core/src/anthropic/: client.rs  mod.rs  models.rs  stream.rs  translate.rs
crates/core/src/anthropic/stream/: delta.rs  tests.rs
crates/core/src/anthropic/translate/: tests.rs
crates/core/src/assets/: error.html  success.html
crates/core/src/auth/: anthropic.rs  mod.rs  oauth.rs  pkce.rs  status.rs  storage.rs
crates/core/src/auth/storage/: identity.rs
crates/core/src/config/: overlay.rs  providers.rs  sandbox.rs  store.rs  tests.rs
crates/core/src/context_manifest/: tests.rs
crates/core/src/decisions/: capture.rs  prompt.rs  reconcile.rs  render.rs  store.rs  tests.rs
crates/core/src/doctor/: path.rs  sandbox.rs  sections.rs  tests.rs
crates/core/src/hooks/: presets.rs  tests.rs
crates/core/src/mcp/: adapter.rs  process.rs  resources.rs  tests.rs  wire.rs
crates/core/src/models_report/: tests.rs
crates/core/src/openai/: chat.rs  client.rs  mod.rs  models.rs  responses.rs  stream.rs
crates/core/src/openai/chat/: accumulator.rs  client.rs  extract.rs  request.rs  stream.rs
crates/core/src/openai/stream/: tests.rs  value.rs
crates/core/src/permissions/: glob.rs  shell.rs  store.rs  tests.rs
crates/core/src/proof/: tests.rs
crates/core/src/race/: judge.rs  mod.rs  score.rs  strategy.rs
crates/core/src/receipt/: html.rs  markdown.rs  tests.rs
crates/core/src/repo_twin/: gitmap.rs  imports.rs  mod.rs  pulse.rs  rules.rs  select.rs  symbols.rs  testmap.rs
crates/core/src/repo_twin/select/: tests.rs
crates/core/src/seal/: tests.rs
crates/core/src/skill/: parse.rs
crates/core/src/subagent/: tests.rs
crates/core/src/tools/: args.rs  ask.rs  decision.rs  dispatch.rs  fs.rs  goal.rs  lsp.rs  memory.rs  mod.rs  notebook.rs  plan.rs  registry.rs  schema.rs  search.rs  shell.rs  skill.rs  think.rs  todo.rs  tool_search.rs  types.rs  validate.rs  wait.rs  web.rs  worktree.rs  xray.rs
crates/core/src/tools/dispatch/: tests.rs
crates/core/src/tools/fs/: common.rs  edit.rs  edit_undo_tests.rs  list.rs  read.rs  read_write_tests.rs  test_support.rs  tests_a.rs  tests_b.rs  undo.rs  write.rs
crates/core/src/tools/lsp/: symbols.rs
crates/core/src/tools/memory/: inject.rs  tests.rs
crates/core/src/tools/notebook/: tests.rs
crates/core/src/tools/registry/: tests.rs
crates/core/src/tools/search/: glob.rs  grep.rs  shared.rs  test_support.rs
crates/core/src/tools/shell/: danger.rs  poll.rs  run.rs  sandbox.rs  support.rs  test_support.rs
crates/core/src/tools/todo/: tests.rs
crates/core/src/tools/web/: search.rs  tests.rs
crates/core/src/usage/: tests.rs
crates/core/src/why_diff/: tests.rs
crates/core/tests/: hooks_lifecycle.rs  mcp_live.rs  oauth_openai_live.rs  rewind_roundtrip.rs  session_roundtrip.rs  undo_roundtrip.rs  walk_up_memory.rs
docs/: SOUL.md  (+4 more)
(+85 files in other folders)
