[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.0.4"
edition = "2021"
license = "MIT"
authors = ["Ryan"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
url = "2"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
eventsource-stream = "0.2"
bytes = "1"
axum = { version = "0.7", features = ["ws"] }
once_cell = "1"
webbrowser = "1"
# Do NOT enable the `scrolling-regions` feature. It makes `insert_before` use
# DECSTBM scroll regions, and Windows Terminal discards lines scrolled out of
# a region instead of pushing them into scrollback (microsoft/terminal#3673) —
# so in inline mode the whole transcript silently vanished and wheel-scroll had
# nothing to scroll. The fallback path scrolls the whole screen with real
# newlines (scrollback works everywhere); its clear-and-redraw blink is hidden
# by the synchronized-update (DECSET 2026) wrapper around commit+draw in
# `main_loop`, so the feature's anti-flicker win is already covered.
ratatui = { version = "0.29" }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
textwrap = "0.16"
unicode-width = "0.2"
arboard = { version = "3", default-features = false, features = ["wayland-data-control", "image-data"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
libc = "0.2"
