[package]
name = "opencli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencli"
path = "src/main.rs"

[dependencies]
opencli-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
futures-util.workspace = true
url.workspace = true
rand.workspace = true
ratatui.workspace = true
crossterm.workspace = true
textwrap.workspace = true
unicode-width.workspace = true
dirs = "5"
arboard.workspace = true
image.workspace = true
chrono.workspace = true
