[package]
name = "tomte-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
bytes.workspace = true
once_cell.workspace = true
webbrowser.workspace = true
axum.workspace = true
regex = "1"
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
